modified my radios buttons

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <div class="form-group">
                     <p>Would you recommend freeCodeCamp to a friend?</p>
                     <div>
-                        <input type="radio" checked><label for="">Definitely</label><br>
-                        <input type="radio"><label for="">Maybe</label><br>
-                        <input type="radio"><label for="">Not sure</label><br>
+                        <input name="text" type="radio" checked><label for="">Definitely</label><br>
+                        <input name="text" type="radio"><label for="">Maybe</label><br>
+                        <input name="text" type="radio"><label for="">Not sure</label><br>
                     </div>
                 </div>    
                 <div class="form-group">
