increase spacing between checkboxes and radios button elements. Also, correct spelling error and change the border of my submit button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
         <div class="header">
             <h2>freeCodeCamp Survey Form</h2>
-            <p>Thnaks you for taking the time to help us improve the problem</p>
+            <p>Thank you for taking the time to help us improve the problem</p>
         </div><br>
     
         <div class="design">
@@ -38,12 +38,12 @@
                     <p>Which option best describe your current role?</p>
                     <div>
                         <select class="form-control1" name="" id="">
-                            <option value="">Select current role</option>
-                            <option value="">Student</option>
-                            <option value="">Full Time Job</option>
-                            <option value="">Full Time Learner</option>
-                            <option value="">Prefer not to say</option>
-                            <option value="">Other</option>
+                            <option class="margin" value="">Select current role</option>
+                            <option class="margin" value="">Student</option>
+                            <option class="margin" value="">Full Time Job</option>
+                            <option class="margin" value="">Full Time Learner</option>
+                            <option class="margin" value="">Prefer not to say</option>
+                            <option class="margin" value="">Other</option>
                         </select>
                     </div>
                 </div>  
@@ -59,11 +59,11 @@
                     <p>What is your favorite feature of freeCodeCamp?</p>
                     <div>
                         <select class="form-control1" name="" id="">
-                            <option value="" selected>ChalSelect current role</option>
-                            <option value="">Challenges</option>
-                            <option value="">Projects</option>
-                            <option value="">Community</option>
-                            <option value="">Open Source</option>
+                            <option class="margin"  value="" selected>ChalSelect current role</option>
+                            <option class="margin"  value="">Challenges</option>
+                            <option class="margin"  value="">Projects</option>
+                            <option class="margin"  value="">Community</option>
+                            <option class="margin"  value="">Open Source</option>
                         </select>
                     </div>
                 </div>
@@ -71,16 +71,16 @@
                     <p>What would you like to see improved? (Check all that apply)</p>
                     <div>
                         <input type="checkbox"><label for="">Front-end Projects</label><br>
-                        <input type="checkbox"><label for="">Back-end Projects</label><br>
-                        <input type="checkbox"><label for="">Data Visualization</label><br>
-                        <input type="checkbox"><label for="">Challenges</label><br>
-                        <input type="checkbox"><label for="">Open Source Community</label><br>
-                        <input type="checkbox"><label for="">Gitter help rooms</label><br>
-                        <input type="checkbox"><label for="">Videos</label><br>
-                        <input type="checkbox"><label for="">City Meetups</label><br>
-                        <input type="checkbox"><label for="">Wiki</label><br>
-                        <input type="checkbox"><label for="">Forum</label><br>
-                        <input type="checkbox"><label for="">Additional Courses</label>
+                        <input class="margin" type="checkbox"><label for="">Back-end Projects</label><br>
+                        <input class="margin" type="checkbox"><label for="">Data Visualization</label><br>
+                        <input class="margin" type="checkbox"><label for="">Challenges</label><br>
+                        <input class="margin" type="checkbox"><label for="">Open Source Community</label><br>
+                        <input class="margin" type="checkbox"><label for="">Gitter help rooms</label><br>
+                        <input class="margin" type="checkbox"><label for="">Videos</label><br>
+                        <input class="margin" type="checkbox"><label for="">City Meetups</label><br>
+                        <input class="margin" type="checkbox"><label for="">Wiki</label><br>
+                        <input class="margin" type="checkbox"><label for="">Forum</label><br>
+                        <input class="margin" type="checkbox"><label for="">Additional Courses</label>
                     </div>
                     </div>
                 <div>
