--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="form-group">
                     <p>Which option best describe your current role?</p>
                     <div>
-                        <select class="form-control1" name="" id="">
+                        <select class="form-control1">
                             <option class="margin" value="">Select current role</option>
                             <option class="margin" value="">Student</option>
                             <option class="margin" value="">Full Time Job</option>
@@ -58,7 +58,7 @@
                 <div class="form-group">
                     <p>What is your favorite feature of freeCodeCamp?</p>
                     <div>
-                        <select class="form-control1" name="" id="">
+                        <select class="form-control1">
                             <option class="margin"  value="" selected>ChalSelect current role</option>
                             <option class="margin"  value="">Challenges</option>
                             <option class="margin"  value="">Projects</option>
@@ -86,7 +86,7 @@
                 <div>
                     <label for="">Any comments or suggestions?</label>
                     <div class="form-group">
-                        <textarea class="form-control2" name="" id="" cols="30" rows="5" placeholder="Enter your comment here..."></textarea>
+                        <textarea class="form-control2" cols="30" rows="5" placeholder="Enter your comment here..."></textarea>
                     </div>
                 </div>
                 <div class="form-group">
